[package]
name = "auth-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
sea-orm = { version = "0.10.6", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["full"] }

[dev-dependencies]
dotenv = "0.15.0"
migration = { path = "./migration" }
